resume section updated

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Dhruba Datta</h4>
+              <h4>DHRUBA DATTA</h4>
               <p>
                 A software engineering graduate, skilled in various technical domains, committed to continuous learning
                 and innovation, passionate about photography, videography and travel.
@@ -284,64 +284,65 @@
               <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
               <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
-
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
               <h4>Conference </h4>
-              <!-- <ul>
-                <li> -->
-              <h5>Status: Published [November 2023]</h5>
-              <p>
-                <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
-                <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                  Metropolitan University, London, UK.</em>
-              </p>
-              <h6>
-                <span>
-                  <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
-                    title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
-                    href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank" title="ResearchGate"><i
-                      class='bx bx-link-external'></i></a>
-                </span>
-              </h6>
-              <br>
-              <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
-                  title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
-              <!-- </li>
-              </ul> -->
+              <div class="timeline-item-alt" data-aos="fade-up">
+                <h5>Status: Published [November 2023]</h5>
+                <p>
+                  <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
+                  <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                    Metropolitan University, London, UK.</em>
+                </p>
+                <h6>
+                  <span>
+                    <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                      title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
+                      href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank" title="ResearchGate"><i
+                        class='bx bx-link-external'></i></a>
+                  </span>
+                </h6>
+                <br>
+                <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                    title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
 
+              </div>
             </div>
             <h3 class="resume-title">Achievements</h3>
-            <div class="resume-item">
-              <ul>
-                <li>Received the prestigious Indian Council for Cultural Relations <b>Government Scholarship</b>,
-                  entailing cost-free education and a monthly stipend.</li>
-                <li>Built an
-                  <b>SEO-optimized </b>
-                  personal portfolio website that ranked on the
-                  <b> first page of Google </b>
-                  search results.
-                  <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
-                      class='bx bx-link-external'></i></a>
-                </li>
-                <li>Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
-                  over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.
-                  <a href="https://leetcode.com/u/dhruba-datta/" target="_blank" title="Visit Website"><i
-                      class='bx bx-link-external'></i></a>
-                </li>
-                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
-                    members</b>.</li>
-                <li>Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
-                  the <b>
-                    DRMC National Science Festival '16.</b></li>
-                <li>Achieved the <b>3<sup>rd</sup> position</b> out of <b>120 teams</b> in the Science Project
-                  competition at the
-                  <b>SGHS Inter-School Science Festival '16.</b>
-                </li>
-              </ul>
-
+            <div class="timeline">
+              <div class="timeline-item">
+                Received the prestigious Indian Council for Cultural Relations <b>Government Scholarship</b>,
+                entailing cost-free education and a monthly stipend.
+              </div>
+              <div class="timeline-item">
+                Built an
+                <b>SEO-optimized </b>personal portfolio website that ranked on the<b> first page of Google </b>search
+                results.
+                <a href="https://www.google.com/search?q=dhruba+datta" target="_blank" title="Visit Website"><i
+                    class='bx bx-link-external'></i></a>
+              </div>
+              <div class="timeline-item">
+                Solved over <b> 450 problems </b> and achieved a LeetCode reputation of <b>3K+</b> and captivating
+                over <b>200K</b> views, captured the attention of coding enthusiasts worldwide.
+                <a href="https://leetcode.com/u/dhruba-datta/" target="_blank" title="Visit Website"><i
+                    class='bx bx-link-external'></i></a>
+              </div>
+              <!-- <div class="timeline-item-alt">
+                Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>600
+                  members</b>.</li>
+              </div> -->
+              <div class="timeline-item">
+                Secured <b>1<sup>st</sup> position</b> among <b>250+ teams</b> in the Wall Magazine competition at
+                the <b>
+                  DRMC National Science Festival '16.</b>
+              </div>
+              <div class="timeline-item">
+                Achieved the <b>3<sup>rd</sup> position</b> out of <b>120 teams</b> in the Science Project
+                competition at the
+                <b>SGHS Inter-School Science Festival '16.</b>
+              </div>
             </div>
           </div>
         </div>
@@ -359,7 +360,10 @@
             <h3 class="resume-title">Professional</h3>
 
             <div class="resume-item">
-              <h4>kounsel</h4>
+              <h4>Kounsel
+                <a href="https://www.linkedin.com/company/kounsel/" target="_blank" title="LinkedIn"><i
+                    class='bx bx-link-external'></i></a>
+              </h4>
               <h5>June 2024 - Present</h5>
               <p> <em>California, United States of America · Remote</em> </p>
               <h6>Quality Assurance Engineer</h6>
@@ -375,7 +379,10 @@
             </div>
 
             <div class="resume-item">
-              <h4>Kingsley Engineering Service Corporation</h4>
+              <h4>Kingsley Engineering Service Corporation
+                <a href="https://www.linkedin.com/company/kingsley-engineering-service-company/" target="_blank"
+                  title="LinkedIn"><i class='bx bx-link-external'></i></a>
+              </h4>
               <h5>August 2023 - Present</h5>
               <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
               <h6>Software Engineer</h6>
@@ -389,7 +396,10 @@
             </div>
 
             <div class="resume-item">
-              <h4>Revinns Limited</h4>
+              <h4>Revinns Limited
+                <a href="https://www.linkedin.com/company/revinns/" target="_blank" title="LinkedIn"><i
+                    class='bx bx-link-external'></i></a>
+              </h4>
               <h5>June 2022 - July 2022</h5>
               <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
               <h6>Web Developer Intern</h6>
