timeline added in resume

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Hey there! </h3>
             <p class="font-weight-normal">
-              I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During
+              I graduated from Delhi Technological University (DTU) with a BTech degree in Software Engineering. During
               my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such
               as
               data structure & algorithms, front-end development, Ui/Ux design, SEO and machine learning. I also have a
@@ -134,12 +134,10 @@
                   <li> <i class="icofont-rounded-right"></i> <strong>Email:</strong> dhrubadattaanjan@gmail.com </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Birthdate:</strong> 25 February, 2000 </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Address:</strong> New Delhi, India </li>
-                  <!-- <li> <i class="icofont-rounded-right"></i> <strong>Hometown:</strong> Dhaka, Bangladesh </li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <!-- <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445 66978 </li> -->
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology (BTech)
                   </li>
@@ -260,36 +258,40 @@
               </ul>
             </div>
             <h3 class="resume-title">Education</h3>
-            <!-- <div class="resume-item">
-              <h4>Master of Science (MSC)</h4>
-              <h5>September 2024 - Present</h5>
-              <p><em>University of Naples Federico II, Naples, Italy</em></p>
-              <h6>CGPA: --/4.00 [Data Science]</h6>
-            </div> -->
-            <div class="resume-item">
-              <h4>Bachelor of Technology (BTech)</h4>
-              <h5>August 2019 - July 2023</h5>
-              <p><em>Delhi Technological University, New Delhi, India</em></p>
-              <h6>CGPA: 8.22/10.00 [Software Engineering]</h6>
-            </div>
-            <div class="resume-item">
-              <h4>Higher Secondary Certificate (HSC)</h4>
-              <h5>July 2016 - August 2018</h5>
-              <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
-              <h6>GPA: 5.00/5.00 [Science]</h6>
-            </div>
-            <div class="resume-item">
-              <h4>Secondary School Certificate (SSC)</h4>
-              <h5>January 2006 - June 2016</h5>
-              <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
-              <h6>GPA: 5.00/5.00 [Science]</h6>
+
+            <div class="timeline">
+              <!-- <div class="resume-item">
+                <h4>Master of Science (MSC)</h4>
+                <h5>September 2024 - Present</h5>
+                <p><em>University of Naples Federico II, Naples, Italy</em></p>
+                <h6>CGPA: --/4.00 [Data Science]</h6>
+              </div> -->
+              <div class="resume-item">
+                <h4>Bachelor of Technology (BTech)</h4>
+                <h5>August 2019 - July 2023</h5>
+                <p><em>Delhi Technological University, New Delhi, India</em></p>
+                <h6>CGPA: 8.22/10.00 [Software Engineering]</h6>
+              </div>
+              <div class="resume-item">
+                <h4>Higher Secondary Certificate (HSC)</h4>
+                <h5>July 2016 - August 2018</h5>
+                <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
+                <h6>GPA: 5.00/5.00 [Science]</h6>
+              </div>
+              <div class="resume-item">
+                <h4>Secondary School Certificate (SSC)</h4>
+                <h5>January 2006 - June 2016</h5>
+                <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
+                <h6>GPA: 5.00/5.00 [Science]</h6>
+              </div>
+
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
               <h4>Conference </h4>
-              <div class="timeline-item-alt" data-aos="fade-up">
+              <div class="timeline-item-alt">
                 <h5>Status: Published [November 2023]</h5>
                 <p>
                   <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
@@ -299,9 +301,10 @@
                 <h6>
                   <span>
                     <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
-                      title="ResearchGate"><i class='bx bx-link-external'></i></a>, Harsh Prakash, Priya Singh<a
-                      href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank" title="ResearchGate"><i
-                        class='bx bx-link-external'></i></a>
+                      title="ResearchGate"><i class='bx bx-link-external'></i></a>,
+                    Harsh Prakash,
+                    Priya Singh<a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
+                      title="ResearchGate"><i class='bx bx-link-external'></i></a>
                   </span>
                 </h6>
                 <br>
@@ -358,62 +361,63 @@
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Professional</h3>
+            <div class="timeline">
+              <div class="resume-item">
+                <h4>Kounsel
+                  <a href="https://www.linkedin.com/company/kounsel/" target="_blank" title="LinkedIn"><i
+                      class='bx bx-link-external'></i></a>
+                </h4>
+                <h5>June 2024 - Present</h5>
+                <p> <em>California, United States of America · Remote</em> </p>
+                <h6>Quality Assurance Engineer</h6>
 
-            <div class="resume-item">
-              <h4>Kounsel
-                <a href="https://www.linkedin.com/company/kounsel/" target="_blank" title="LinkedIn"><i
-                    class='bx bx-link-external'></i></a>
-              </h4>
-              <h5>June 2024 - Present</h5>
-              <p> <em>California, United States of America · Remote</em> </p>
-              <h6>Quality Assurance Engineer</h6>
+                <ul>
+                  <li>Conducted quality assurance and automation testing using Selenium, and managed bugs with Jira to
+                    enhance workflow.
+                  </li>
+                  <li>Assisted in backend development by adding new products to the MongoDB server and maintained code
+                    quality with Bitbucket.</li>
+                </ul>
 
-              <ul>
-                <li>Conducted quality assurance and automation testing using Selenium, and managed bugs with Jira to
-                  enhance workflow.
-                </li>
-                <li>Assisted in backend development by adding new products to the MongoDB server and maintained code
-                  quality with Bitbucket.</li>
-              </ul>
+              </div>
 
+              <div class="resume-item">
+                <h4>Kingsley Engineering Service Corporation
+                  <a href="https://www.linkedin.com/company/kingsley-engineering-service-company/" target="_blank"
+                    title="LinkedIn"><i class='bx bx-link-external'></i></a>
+                </h4>
+                <h5>August 2023 - Present</h5>
+                <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
+                <h6>Software Engineer</h6>
+                <ul>
+                  <li>Redesigned the company's website for improved functionality and SEO, and developed micro websites
+                    and web apps to enhance user experience.
+                  </li>
+                  <li>Created visually captivating interfaces with seamless navigation and produced engaging social
+                    media
+                    content for brand promotion.</li>
+                </ul>
+              </div>
+
+              <div class="resume-item">
+                <h4>Revinns Limited
+                  <a href="https://www.linkedin.com/company/revinns/" target="_blank" title="LinkedIn"><i
+                      class='bx bx-link-external'></i></a>
+                </h4>
+                <h5>June 2022 - July 2022</h5>
+                <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
+                <h6>Web Developer Intern</h6>
+                <ul>
+                  <li>
+                    Gained experience in UI design and front-end development, contributing to the
+                    development of micro websites and web apps.</li>
+                  <li>
+                    Applied design principles to create visually captivating and user-centric interfaces, ensuring
+                    compatibility across various devices and browsers using HTML and CSS.
+                  </li>
+                </ul>
+              </div>
             </div>
-
-            <div class="resume-item">
-              <h4>Kingsley Engineering Service Corporation
-                <a href="https://www.linkedin.com/company/kingsley-engineering-service-company/" target="_blank"
-                  title="LinkedIn"><i class='bx bx-link-external'></i></a>
-              </h4>
-              <h5>August 2023 - Present</h5>
-              <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
-              <h6>Software Engineer</h6>
-              <ul>
-                <li>Redesigned the company's website for improved functionality and SEO, and developed micro websites
-                  and web apps to enhance user experience.
-                </li>
-                <li>Created visually captivating interfaces with seamless navigation and produced engaging social media
-                  content for brand promotion.</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>Revinns Limited
-                <a href="https://www.linkedin.com/company/revinns/" target="_blank" title="LinkedIn"><i
-                    class='bx bx-link-external'></i></a>
-              </h4>
-              <h5>June 2022 - July 2022</h5>
-              <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
-              <h6>Web Developer Intern</h6>
-              <ul>
-                <li>
-                  Gained experience in UI design and front-end development, contributing to the
-                  development of micro websites and web apps.</li>
-                <li>
-                  Applied design principles to create visually captivating and user-centric interfaces, ensuring
-                  compatibility across various devices and browsers using HTML and CSS.
-                </li>
-              </ul>
-            </div>
-
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Skills</h3>
@@ -430,31 +434,32 @@
             </div>
 
             <h3 class="resume-title">Volunteer</h3>
-
-            <div class="resume-item">
-              <h4>Dhrubotara Youth Development Foundation</h4>
-              <h5>September 2021 - August 2022</h5>
-              <p> <em>New Delhi, India</em> </p>
-              <p>
-                DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
-                issues of both countries.
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>Mentor</h4>
-              <h5>December 2018 - July 2019</h5>
-              <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
-                12<sup>th</sup>
-                grade in subjects
-                including Maths, Physics, and ICT. </p>
-            </div>
-            <div class="resume-item">
-              <h4>Help Bangladesh</h4>
-              <h5>May 2017 - July 2019</h5>
-              <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
-                education for over hundred children with a team of more than fifty members. </p>
+            <div class="timeline">
+              <div class="resume-item">
+                <h4>Dhrubotara Youth Development Foundation</h4>
+                <h5>September 2021 - August 2022</h5>
+                <p> <em>New Delhi, India</em> </p>
+                <p>
+                  DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
+                  issues of both countries.
+                </p>
+              </div>
+              <div class="resume-item">
+                <h4>Mentor</h4>
+                <h5>December 2018 - July 2019</h5>
+                <p> <em>Dhaka, Bangladesh</em> </p>
+                <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
+                  12<sup>th</sup>
+                  grade in subjects
+                  including Maths, Physics, and ICT. </p>
+              </div>
+              <div class="resume-item">
+                <h4>Help Bangladesh</h4>
+                <h5>May 2017 - July 2019</h5>
+                <p> <em>Dhaka, Bangladesh</em> </p>
+                <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
+                  education for over hundred children with a team of more than fifty members. </p>
+              </div>
             </div>
           </div>
         </div>
