resume design updated

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                     Metropolitan University, London, UK.</em>
                 </p>
-                <h6>
+                <p>
                   <span>
                     <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
                       title="ResearchGate"><i class='bx bx-link-external'></i></a>,
@@ -306,8 +306,7 @@
                     Priya Singh<a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
                       title="ResearchGate"><i class='bx bx-link-external'></i></a>
                   </span>
-                </h6>
-                <br>
+                </p>
                 <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
                     title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
 
@@ -439,7 +438,7 @@
                 <h4>Dhrubotara Youth Development Foundation</h4>
                 <h5>September 2021 - August 2022</h5>
                 <p> <em>New Delhi, India</em> </p>
-                <p>
+                <p class="volunteer">
                   DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
                   issues of both countries.
                 </p>
@@ -448,7 +447,8 @@
                 <h4>Mentor</h4>
                 <h5>December 2018 - July 2019</h5>
                 <p> <em>Dhaka, Bangladesh</em> </p>
-                <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
+                <p class="volunteer">While applying for higher education, I assisted high school students of
+                  10<sup>th</sup> and
                   12<sup>th</sup>
                   grade in subjects
                   including Maths, Physics, and ICT. </p>
@@ -457,7 +457,8 @@
                 <h4>Help Bangladesh</h4>
                 <h5>May 2017 - July 2019</h5>
                 <p> <em>Dhaka, Bangladesh</em> </p>
-                <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
+                <p>Co-founded a group aimed to help and support street children, providing basic needs
+                  such as food &
                   education for over hundred children with a team of more than fifty members. </p>
               </div>
             </div>
