resume skill section updated

--- a/index.html
+++ b/index.html
@@ -420,16 +420,26 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Skills</h3>
-            <div class="resume-item">
-              <ul>
-                <li>Programming Languages: C, C++, Python, Kotlin, Java.</li>
-                <li>Frameworks: ReactJS, React Native, Tailwind, Bootstrap.</li>
-                <li>Database: Firebase, MongoDB, MySQL, Sanity.</li>
-                <li>Cloud Platforms: GitHub, Bitbucket, Netlify.</li>
-                <li>Additional Skills: SEO, Testing, UI Design, Graphic Design.</li>
-                <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
-                <li>Others: VS Code, IntelliJ, Figma, MS Office, Adobe Photoshop.</li>
-              </ul>
+
+            <div class="timeline">
+
+              <div class="resume-item">
+                <h4>Technical</h4>
+                <ul>
+                  <li>Programming Languages: C, C++, Python, Kotlin, Java.</li>
+                  <li>Frameworks: ReactJS, React Native, Tailwind, Bootstrap.</li>
+                  <li>Database & Cloud: Firebase, MongoDB, GitHub, Bitbucket, Netlify.</li>
+                  <!-- <li>Additional Skills: SEO, Testing, UI Design, Graphic Design.</li> -->
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Others</h4>
+                <ul>
+                  <!-- <li>Fluent in English, Bengali, Hindi.</li> -->
+                  <li>Have strong analytical and problem-solving abilities.</li>
+                  <li>Tools: VS Code, IntelliJ, Figma, MS Office, Adobe Photoshop.</li>
+                </ul>
+              </div>
             </div>
 
             <h3 class="resume-title">Volunteer</h3>
