journal added but in comments

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
             <div class="timeline">
               <!-- <div class="resume-item">
-                <h4>Master of Science (MSC)</h4>
+                <h4>Master of Science (MSc)</h4>
                 <h5>September 2024 - Present</h5>
                 <p><em>University of Naples Federico II, Naples, Italy</em></p>
                 <h6>CGPA: --/4.00 [Data Science]</h6>
@@ -289,28 +289,55 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Publications</h3>
-            <div class="resume-item">
-              <h4>Conference </h4>
-              <div class="timeline-item-alt">
-                <h5>Status: Published [November 2023]</h5>
-                <p>
-                  <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
-                  <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
-                    Metropolitan University, London, UK.</em>
-                </p>
-                <p>
-                  <span>
-                    <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
-                      title="ResearchGate"><i class='bx bx-link-external'></i></a>,
-                    Harsh Prakash,
-                    Priya Singh<a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
-                      title="ResearchGate"><i class='bx bx-link-external'></i></a>
-                  </span>
-                </p>
-                <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
-                    title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
 
+            <div class="timeline">
+              <!-- <div class="resume-item">
+                <h4>Journal </h4>
+                <div class="timeline-item-alt">
+                  <h5>Status: in Progress</h5>
+                  <p>
+                    <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
+                    <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                      Metropolitan University, London, UK.</em>
+                  </p>
+                  <p>
+                    <span>
+                      <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>,
+                      Harsh Prakash,
+                      Priya Singh<a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>
+                    </span>
+                  </p>
+                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
+
+                </div>
+              </div> -->
+              <div class="resume-item">
+                <h4>Conference </h4>
+                <div class="timeline-item-alt">
+                  <h5>Status: Published [November 2023]</h5>
+                  <p>
+                    <b> Skin Cancer Detection with Edge Devices Using YOLOv7 Deep CNN,</b>
+                    <em>4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                      Metropolitan University, London, UK.</em>
+                  </p>
+                  <p>
+                    <span>
+                      <b>Dhruba Datta</b><a href="https://www.researchgate.net/profile/Dhruba-Datta-2" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>,
+                      Harsh Prakash,
+                      Priya Singh<a href="https://www.researchgate.net/profile/Priya-Singh-64" target="_blank"
+                        title="ResearchGate"><i class='bx bx-link-external'></i></a>
+                    </span>
+                  </p>
+                  <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
+                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
+
+                </div>
               </div>
+
             </div>
             <h3 class="resume-title">Achievements</h3>
             <div class="timeline">
