--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li> <i class="icofont-rounded-right"></i> <strong>Email:</strong> dhrubadattaanjan@gmail.com </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Birthdate:</strong> 25 February, 2000 </li>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Address:</strong> New Delhi, India </li>
+                  <li> <i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 25 February, 2000 </li>
+                  <li> <i class="icofont-rounded-right"></i> <strong>City:</strong> Dhaka, Bangladesh </li>
                 </ul>
               </div>
               <div class="col-lg-6">
