my skill section updated

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <img width="100" height="100" src="img/Skills/web.webp" alt="dhruba datta">
               </div>
               <h4>Web Development</h4>
-              <p>Front-end Development using HTML, CSS and skilled in deploying Back-end</p>
+              <p>Proficient in HTML, CSS, JavaScript, React & skilled in back-end deployment</p>
             </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
@@ -192,7 +192,7 @@
                 <img width="100" height="100" src="img/Skills/dsa.webp" alt="dhruba datta">
               </div>
               <h4>Data Structure & Algorithms</h4>
-              <p>Preparation for technical interviews and developed strong coding skills</p>
+              <p>Strong problem solving skills with a focus on technical interview preparation</p>
             </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
@@ -202,7 +202,7 @@
                 <img width="100" height="100" src="img/Skills/dbms.webp" alt="dhruba datta">
               </div>
               <h4>Machine Learning</h4>
-              <p>Trying to learn and explore the machine learning domain over time</p>
+              <p>Exploring supervised and unsupervised learning models for research</p>
             </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
@@ -211,7 +211,7 @@
                 <img width="100" height="100" src="img/Skills/notes.webp" alt="dhruba datta">
               </div>
               <h4>Blog Writing</h4>
-              <p>Explore the latest trends in technology and write variety of articles on Medium</p>
+              <p> Write articles about emerging technologies & recent trends in tech on Medium</p>
             </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
@@ -220,7 +220,7 @@
                 <img width="100" height="100" src="img/Skills/camera.webp" alt="dhruba datta">
               </div>
               <h4>Photography</h4>
-              <p>Sharing photography on Instagram, skilled in Photoshop, Lightroom & Premiere Pro</p>
+              <p>Share photography on Instagram, skilled in Photoshop, Lightroom & Premiere Pro</p>
             </a>
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
@@ -229,7 +229,7 @@
                 <img width="100" height="100" src="img/Skills/youtube.webp" alt="dhruba datta">
               </div>
               <h4>Content Creation</h4>
-              <p>Interest in Video Creation & Editing, with uploads on YouTube</p>
+              <p>Enthusiastic about producing entertaining travel and lifestyle videos</p>
             </a>
           </div>
         </div>
