footer buttons titile updated

--- a/index.html
+++ b/index.html
@@ -713,15 +713,16 @@
       <h5>Feel free to reach me out on any of these platforms </h5><br>
       <div class="social-links">
         <hr>
-        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" title="LinkedIn" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
         <!-- <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a> -->
-        <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
+        <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" title="Youtube" class="youtube"><i
             class="bx bxl-youtube"></i></a>
-        <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
+        <a href="https://www.instagram.com/dhrubz_/" target="_blank" title="Instagram" class="instagram"><i
             class="bx bxl-instagram"></i></a>
-        <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
+        <a href="https://twitter.com/dhruba_anjan" target="_blank" title="Twitter" class="twitter"><i
+            class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" title="Facebook" class="facebook"><i
             class="bx bxl-facebook"></i></a>
         <hr>
       </div>
