font size updated

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </span>
                   </p>
                   <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
-                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
+                      title="View Publication">10.1007/978-981-99-6550-2_5</a></h6>
 
                 </div>
               </div> -->
@@ -333,7 +333,7 @@
                     </span>
                   </p>
                   <h6>Doi: <a href="https://link.springer.com/chapter/10.1007/978-981-99-6550-2_5" target="_blank"
-                      title="Visit Website">10.1007/978-981-99-6550-2_5</a></h6>
+                      title="View Publication">10.1007/978-981-99-6550-2_5</a></h6>
 
                 </div>
               </div>
@@ -654,7 +654,7 @@
           </div>
 
           <div class="col-lg-8">
-            <h4>Updates</h4>
+            <h4 class="update-title">Updates</h4>
             <hr>
             <div class="timeline">
               <!-- <div class="timeline-item" data-aos="fade-up">
