--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     got accepted in ICDAM-2023.</h5>
                 </div>
               </div>
-              <div class="timeline-item" data-aos="fade-up">
+              <!-- <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[18.09.2022]</em></div>
                 <div class="timeline-content">
                   <h5>This portfolio got featured on the first page of Google search results.
@@ -689,7 +689,7 @@
                         class='bx bx-link-external'></i></a>
                   </h5>
                 </div>
-              </div>
+              </div> -->
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[14.07.2019]</em></div>
                 <div class="timeline-content">
