updated url link

--- a/index.html
+++ b/index.html
@@ -530,8 +530,9 @@
                   <a href="https://github.com/dhruba-datta/AB-Pharmacy-Expo" target="_blank"
                     data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i
                       class="bx bxl-github"></i></a>
-                  <a href="https://ab-pharmacy.netlify.app/" target="_blank" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Visit Website"><i class="bx bx-link-external"></i></a>
+                  <a href="https://drive.google.com/file/d/1d-SpGExNebycXrFragbLfaREkqJQVCFB/view?usp=sharing"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Visit Website"><i class="bx bx-link-external"></i></a>
                 </div>
               </div>
             </div>
