--- a/index.html
+++ b/index.html
@@ -694,7 +694,8 @@
               <div class="timeline-item" data-aos="fade-up">
                 <div class="timeline-date"><em>[14.07.2019]</em></div>
                 <div class="timeline-content">
-                  <h5>Obtained an offer letter from ICCR to complete my Bachelor's in Software Engineering at Delhi
+                  <h5>Obtained fulbright scholarship from ICCR to complete my Bachelor's in Software Engineering at
+                    Delhi
                     Technological University.</h5>
                 </div>
               </div>
